--- a/lab5/5.md
+++ b/lab5/5.md
@@ -89,8 +89,6 @@ Drop this field in rows along other fields.
 
 ### ✅ **Report 7: INCLUDE Example: Average Loans per Member Report**
 
-
-
 1. Drag and drop the `Latitude` to **Rows**:
 2. Drop `Longititude` in **Columns**
 3. Create a calculated field under **Measures**. Name the field as **Number of Loans per Member** and enter the below formula.
@@ -104,48 +102,45 @@ Drop this field on **Color**
 4. Drop `State` on **Detail**
 
  -----
- ### ✅ **Report 8: Free Night Analysis Report**
+ ### ✅ **Report 8: State by Loans  Report**
 
-**Just duplicate report 7**. 
 
-1. Right click on a empty space of columns (Left pane). Create Parameter and follow the below configuration.
-
-**Note:-**
-- If it automatically picks a random date we can still edit it later.
-
-- Once you have click on ok.
-
-- You will see the parameter created. Now click on the arrow of **Free Night** and click on **show parameter**
-
-- Now you can set the date as **12-12-2020**
-
-2. Create a calculated field under **Tables**. Name the field as **Gets Free Night** and enter the below formula.
-
-**Formula**
-
-`[Free Night] >= [Start Date]
-AND
-[Free Night] <= [End Date]`
-
-Pull this field into **Color**.
-
-3. Right click on the bottom axis and create a reference line. Follow the below configuration.
-
+1. Drop `State` and `Member ID` in Rows
+2. Drop `State` in **Filters** and choose `North Dakota`
+3. Drop `Loan Number` in Text and change the aggregate to **CountDistinct**
 
 ---------
-### ✅ **Report 9: Revenue per Guest Report**
+### ✅ **Report 9: Average Credit Scores by Loan Type Report**
 
-1. Create a calculated field under **Rent**. Name the field as **Revenue** and enter the below formula.
+1. Drop `Portfolio` and `Loan Type` in Rows.
+2. Drop `Credit Score` in **Text** card set it to Average as aggregate
+
+------------
+### ✅ **Report 10 : EXCLUDE: Avg Credit Scores Report**
+
+1. Drop `Portfolio` and `Loan Type` in Rows.
+
+2. Create calculated field 'Average Credit Score Excluding Loan Type' use the below formula
+
+`{EXCLUDE [Loan Type] : AVG([Credit Score])}`
+
+2. Drop `Measure Names` in columns and in filters choose `Average Credit Score Excluding Loan Type` and 'Credit Score'
+2. Drop `Measure Values` in **Text** 
+
+For `Credit Score` change the aggregate to **Average**
+
+---
+### ✅ **Report 11 : EXCLUDE: Difference from Overall Portfolio Average Report**
+
+1. Create a calculated field under **Measures**. Name the field as **Difference from Portfolio Average** and enter the below formula.
 
 **Formula**
 
-`[Rent] - [Discount] + ([Tax per Night] * [Nights Rented])`
+`AVG([Credit Score]) - AVG([Average Credit Score Excluding Loan Type])`
 
-Drop this is Columns
+Drop this in Columns
+2. Drop `Portfolio` and `Loan Type` in Rows.
+3. Drop `Difference from Portfolio Average` to **Label**
+4. Drop `Measure Names` in columns and in filters choose `Average Credit Score Excluding Loan Type` and `Credit Score`
+--------
 
-2. Drop Full Name in Rows
-3. Drop Revenue on Color.
-
-Now Double click on Revenue and enter the below formula.
-`SUM([Revenue]) < 1500`
-------------
