--- a/lab6/6.md
+++ b/lab6/6.md
@@ -1,1 +1,156 @@
+Alright! Let's begin by designing **Lab 4: ** using the provided Superstore data.
+
+
+
+---
+
+### ✅ **Report 1: Quick Table Calc - Running Sum Report**
+
+1. Drag **Order Date** to the Columns shelf.(set to Month)
+2. Drop **Sales** in Rows Twice. For the second Sum(Sales)create a table calculation as follows
+
+3. Create a refernce line for Orders axis. Use the configuration as below
+
+
+Double tap in sheet 1 and rename it as **Quick Table Calc - Running Sum Report**
+
+
+---
+
+### ✅ **Report 2: Sales by Region and Department**
+
+
+**Steps**:
+
+Duplicate the report 1. 
+1. Drop Region and Department in Columns
+2. Drop Oder date twice in Rows. Change them to Year and Quarter respectively.
+3. Drop Region (East & West) and `Order Date(Year)` in Filter
+3. Drop `Sales` in **Text**
+---
+
+### ✅ **Report 3: Addressing and Partitioning Report**
+
+**Duplicate report 2**
+
+1. Create a calculated field under **Tables**. Name the field as **Index** and enter the below formula.
+
+**Formula**
+
+`INDEX()`
+
+Drop this in Text 
+
+2. Do a table calculation to the INDEX() as below:
+
+
+
+
+----
+
+### ✅ **Report 4: Meta Table Calculations Report**
+
+1. Drop `Measure Names` in Columns
+2. Drop `Department` and `Category` in Rows
+3. Ceate Calculated fields as follows:
+
+First - First()
+Last- Last()
+Size - Size()
+
+4. Drop `Measure Names` in the Filters (choose First along Category , Last along Category , Index along Category, Size along Category)
+5. Drop `Measure Values` in **Text**
+Add a table calculation for all the fields (Set it to Specific Dimensions - Category)
+-----
+
+### ✅ **Report 5: Lookup and Previous Value Report**
+
+1. Ceate Calculated fields:
+Lookup - `LOOKUP(ATTR([Category]), -1)`
+Previous Value - `Previous_Value("") + 
+"," + 
+ATTR([Category])`
+
+2. Drag and drop the following in rows
+- Department
+- Category
+- Lookup 
+- Previous Value
+
+3. Add table calculations to the fields Lookup and Previous Value as below
+--------
+### ✅ **Report 6: FIXED Example 2: Most Recent Balance Report**
+
+Just duplicate Report 5. 
+
+
+1. Create a calculated field under **Tables**. Name the field as **Latest Date per Member/Loan** and enter the below formula.
+
+**Formula**
+
+`{FIXED [Member ID],[Loan Number] : MAX([Date])} = [Date]`
+
+Drop this field in rows along other fields.
+
+
+
+-----
+
+### ✅ **Report 7: INCLUDE Example: Average Loans per Member Report**
+
+1. Drag and drop the `Latitude` to **Rows**:
+2. Drop `Longititude` in **Columns**
+3. Create a calculated field under **Measures**. Name the field as **Number of Loans per Member** and enter the below formula.
+
+**Formula**
+
+`{INCLUDE [Member ID] : COUNTD([Loan Number])}`
+
+Drop this field on **Color**
+
+4. Drop `State` on **Detail**
+
+ -----
+ ### ✅ **Report 8: State by Loans  Report**
+
+
+1. Drop `State` and `Member ID` in Rows
+2. Drop `State` in **Filters** and choose `North Dakota`
+3. Drop `Loan Number` in Text and change the aggregate to **CountDistinct**
+
+---------
+### ✅ **Report 9: Average Credit Scores by Loan Type Report**
+
+1. Drop `Portfolio` and `Loan Type` in Rows.
+2. Drop `Credit Score` in **Text** card set it to Average as aggregate
+
+------------
+### ✅ **Report 10 : EXCLUDE: Avg Credit Scores Report**
+
+1. Drop `Portfolio` and `Loan Type` in Rows.
+
+2. Create calculated field 'Average Credit Score Excluding Loan Type' use the below formula
+
+`{EXCLUDE [Loan Type] : AVG([Credit Score])}`
+
+2. Drop `Measure Names` in columns and in filters choose `Average Credit Score Excluding Loan Type` and 'Credit Score'
+2. Drop `Measure Values` in **Text** 
+
+For `Credit Score` change the aggregate to **Average**
+
+---
+### ✅ **Report 11 : EXCLUDE: Difference from Overall Portfolio Average Report**
+
+1. Create a calculated field under **Measures**. Name the field as **Difference from Portfolio Average** and enter the below formula.
+
+**Formula**
+
+`AVG([Credit Score]) - AVG([Average Credit Score Excluding Loan Type])`
+
+Drop this in Columns
+2. Drop `Portfolio` and `Loan Type` in Rows.
+3. Drop `Difference from Portfolio Average` to **Label**
+4. Drop `Measure Names` in columns and in filters choose `Average Credit Score Excluding Loan Type` and `Credit Score`
+--------
+
 
