--- a/lab6/6.md
+++ b/lab6/6.md
@@ -79,78 +79,83 @@ ATTR([Category])`
 
 3. Add table calculations to the fields Lookup and Previous Value as below
 --------
-### ✅ **Report 6: FIXED Example 2: Most Recent Balance Report**
+### ✅ **Report 6: Running Functions Report**
 
 Just duplicate Report 5. 
 
 
-1. Create a calculated field under **Tables**. Name the field as **Latest Date per Member/Loan** and enter the below formula.
+1. Drag and drop the following in rows
+- Department
+- Category
+
+2. Drop `Measure Names` in Columns
+
+3. Create a calculated field under **Tables**. Name the field as **Running Min of Sales** and enter the below formula.
 
 **Formula**
 
-`{FIXED [Member ID],[Loan Number] : MAX([Date])} = [Date]`
+`RUNNING_MIN(SUM([Sales]))`
 
-Drop this field in rows along other fields.
+4. Create a calculated field under **Tables**. Name the field as **Running Sum of Sales** and enter the below formula.
 
+**Formula**
 
+`RUNNING_SUM(SUM([Sales]))`
+
+5. Drop Measure Names in Filters and choose ( Sales, Running Min of Sales, Running Sum of Sales)
+6. Drop `Measure Values` in **Text**
+
+6. Add table configuration for (Running Min of Sales, Running Sum of Sales) as follows
 
 -----
 
-### ✅ **Report 7: INCLUDE Example: Average Loans per Member Report**
+### ✅ **Report 7: Window Functions**
 
-1. Drag and drop the `Latitude` to **Rows**:
-2. Drop `Longititude` in **Columns**
-3. Create a calculated field under **Measures**. Name the field as **Number of Loans per Member** and enter the below formula.
+Duplicate report 6
 
-**Formula**
+1. Create a calculated fields under **Tables**. 
+- Window Max - `WINDOW_MAX(SUM([Sales]))`
+- Window Sum - `WINDOW_SUM(SUM([Sales]))`
 
-`{INCLUDE [Member ID] : COUNTD([Loan Number])}`
+2. For `Measure Names` in Filters and choose ( Sales, Window Max, Window Sum)
+3. Add table configuration for (Window Max, Window Sum) as follows
 
-Drop this field on **Color**
-
-4. Drop `State` on **Detail**
 
  -----
- ### ✅ **Report 8: State by Loans  Report**
+ ### ✅ **Report 8: Rank Functions  Report**
 
 
-1. Drop `State` and `Member ID` in Rows
-2. Drop `State` in **Filters** and choose `North Dakota`
-3. Drop `Loan Number` in Text and change the aggregate to **CountDistinct**
+Duplicate report 7
+
+1. Create calculated field `Rank` with formula
+`RANK(SUM(Sales))`
+2. Just remove the fields Window Max, Window Sum from the filters and keep `Sales` and `Rank`
+
+Add table configuration for Rank as follows
+
 
 ---------
-### ✅ **Report 9: Average Credit Scores by Loan Type Report**
 
-1. Drop `Portfolio` and `Loan Type` in Rows.
-2. Drop `Credit Score` in **Text** card set it to Average as aggregate
+### ✅ **Report 9: Year over Year Growth Report**
+
+1. Drop `Order Date` in Columns twice, once as **Year** and **Quarter**
+2. Drop `Sales` in Rows. For the second Sum(sales) add a table calculation as below
+3. Set the second Sum(sales) to Bar in Marks card 
 
 ------------
-### ✅ **Report 10 : EXCLUDE: Avg Credit Scores Report**
+### ✅ **Report 10 : Sales Per State Report**
 
-1. Drop `Portfolio` and `Loan Type` in Rows.
+1. Drop `Region`and `State` in Rows.
 
-2. Create calculated field 'Average Credit Score Excluding Loan Type' use the below formula
+2. Drop `Sales` in Columns
 
-`{EXCLUDE [Loan Type] : AVG([Credit Score])}`
+3. Drop the following in details and use the formulas along. (Just double click on them)
+State - `TOTAL(COUNTD([State]))`
+Window Sum - `WINDOW_SUM(MIN(1))`
+Size - `Size()`
 
-2. Drop `Measure Names` in columns and in filters choose `Average Credit Score Excluding Loan Type` and 'Credit Score'
-2. Drop `Measure Values` in **Text** 
+Add table configuration for the above fields as follows
 
-For `Credit Score` change the aggregate to **Average**
+4. Drop **Region** in Filters and choose `Central` and `South`
 
 ---
-### ✅ **Report 11 : EXCLUDE: Difference from Overall Portfolio Average Report**
-
-1. Create a calculated field under **Measures**. Name the field as **Difference from Portfolio Average** and enter the below formula.
-
-**Formula**
-
-`AVG([Credit Score]) - AVG([Average Credit Score Excluding Loan Type])`
-
-Drop this in Columns
-2. Drop `Portfolio` and `Loan Type` in Rows.
-3. Drop `Difference from Portfolio Average` to **Label**
-4. Drop `Measure Names` in columns and in filters choose `Average Credit Score Excluding Loan Type` and `Credit Score`
---------
-
-
