--- a/lab7/7.md
+++ b/lab7/7.md
@@ -82,23 +82,27 @@ Duplicate report 6
  -----
  ### ✅ **Report 8: Sales Trends Report**
 
-
-Duplicate report 7
-
-1. Create calculated field `Rank` with formula
-`RANK(SUM(Sales))`
-2. Just remove the fields Window Max, Window Sum from the filters and keep `Sales` and `Rank`
-
-Add table configuration for Rank as follows
+1. Drop Department and Order Date in Columns(Set as Quarter)
+2. Drop Sales in Rows
+3. Drop Department in Filters (Set as Office Suplies)
+4. Order Date in filters (Set to Quarters) again click on the arrow to set Year/Quarter format
+5. Right click on the graph and select show trend lines
+6. Right click on the trend line -> Edit all Trend Lines -> Check the box of Show confidence brands. 
+7. Now select a point in the lowest drop and right click -> Annotate -> set a configuration like below
+Similarly you can do this for highest point in the graph as well.
 
 
 ---------
 
-### ✅ **Report 9: Year over Year Growth Report**
+### ✅ **Report 9: Dramatic Formatting Report**
 
-1. Drop `Order Date` in Columns twice, once as **Year** and **Quarter**
-2. Drop `Sales` in Rows. For the second Sum(sales) add a table calculation as below
-3. Set the second Sum(sales) to Bar in Marks card 
+1. Drop `Order Date` in Columns set as  **Quarter**
+2. Drop `Sales` in Rows. 
+3. Drop Department in Filters (Set as Office Suplies)
+4.  Order Date in filters (Set to Quarters) again click on the arrow to set Year/Quarter format
+5. Right click on the left axis -> format -> Axis -> Font(Blue) and Title (Blue)-> Under **Scale** set **Numbers** to 2 decimal  and change the currency to $.
+6. Click on the Shading and Set Worksheet Color to Black.
+7. Add the trend line and annotations to highest and lowest points of the graph.
 
 ------------
 ### ✅ **Report 10 : Sales Per State Report**
