--- a/lab7/7.md
+++ b/lab7/7.md
@@ -105,19 +105,51 @@ Similarly you can do this for highest point in the graph as well.
 7. Add the trend line and annotations to highest and lowest points of the graph.
 
 ------------
-### ✅ **Report 10 : Sales Per State Report**
+### ✅ **Report 10 : Exploring Tooltips Report**
 
-1. Drop `Region`and `State` in Rows.
+Duplicate the above report 9
 
-2. Drop `Sales` in Columns
+1. Drop Department again to Filters and choose **Use all**
+2. Drop Department into Detail and Tooltips
+3. Change the Worksheet color to white using formatiing.
+---
+### ✅ **Report 11 : Sales by Categories Report**
 
-3. Drop the following in details and use the formulas along. (Just double click on them)
-State - `TOTAL(COUNTD([State]))`
-Window Sum - `WINDOW_SUM(MIN(1))`
-Size - `Size()`
 
-Add table configuration for the above fields as follows
+1.Drop `Sales` in Columns. 
+2. Drop Category to Rows
+3.Do some formatting using by clicking on the left axis (set the currency and units)
+4. Create a Set for Department:
 
-4. Drop **Region** in Filters and choose `Central` and `South`
+- Right-click Department in the data pane.
+
+- Select Create → Set
+
+- Name it: Department Set
+
+- Choose “All” or specific values → Click OK
+5. Create a Set for Order Date by Quarter:
+
+- Right-click Order Date → choose Create → Custom Date
+
+- Set to: Quarter
+
+- Name it: Order Date (Quarter)
+
+- Then right-click Order Date (Quarter) → choose Create → Set
+
+- Name it: Quarter Set
+
+- Select values (or all) → Click OK
+
+6. Create a Combined Set:
+
+- Ctrl+select Department Set and Quarter Set in the data pane.
+
+- Right-click → choose Create Combined Set
+`Tooltip (Department,QUARTER(Order Date))`
+
+Click OK
+
 
 ---
