--- a/lab8/8.md
+++ b/lab8/8.md
@@ -59,57 +59,48 @@ Drop this in Filters
 
 -----
 
-### ✅ **Report 5: Hide (Connect Lines) Report**
+### ✅ Dasboard 1 : Is Least Profitable Always Unprofitable? 
 
-Duplicate the report 4
-
-1. Right click on the left axis -> Format ->Pane-> Special Values -> Hide (Connect Lines)
+1. Click on Dashboard from the Title Pane and create new dashboard. 
+2. Select the 4 reports that we have created so far. Name the sheet as `Is Least Profitable Always Unprofitable`
+3. Add a filter for Department. You can find the filter on the Objects option on the data pane. 
 --------
 
-### ✅ **Report 6: Hide (Break Lines) Report**
+### ✅ **Dasboard 2 : Profit Analysis (Different Devices)**
 
-Just duplicate Report 5. 
-
-
-1. Right click on the left axis -> Format ->Pane-> Special Values -> Hide (Break Lines)
+Just duplicate Report 1 
+Rename it and change the device type to Phone. 
 
 
 -----
 
-### ✅ **Report 7: Bar Chart indicates missing days**
+### ✅ **Report 5: Source**
 
-Duplicate report 6
 
-1. Just Replace `Profit` instead of `Profit (some nulll values)` in rows
-2. In **Marks** card set the type of visual to **Bar**
+
+1. Drag **Sales** to the Columns shelf. 
+2. Drop **Category** in Rows 
+
+Sort the axis to desending order.
 
  -----
- ### ✅ **Report 8: Sales Trends Report**
+ ### ✅ **Report 6: Target**
 
-1. Drop Department and Order Date in Columns(Set as Quarter)
-2. Drop Sales in Rows
-3. Drop Department in Filters (Set as Office Suplies)
-4. Order Date in filters (Set to Quarters) again click on the arrow to set Year/Quarter format
-5. Right click on the graph and select show trend lines
-6. Right click on the trend line -> Edit all Trend Lines -> Check the box of Show confidence brands. 
-7. Now select a point in the lowest drop and right click -> Annotate -> set a configuration like below
-Similarly you can do this for highest point in the graph as well.
+1. Drop  `Order Date` in Columns(Set as Quarter)
+2. Drop `Sales` in Rows
+3. Drop Action(Category) to Filters and choose only Tables
 
 
 ---------
 
-### ✅ **Report 9: Dramatic Formatting Report**
+### ✅ **dasboard 3: Source and Target Example **
 
-1. Drop `Order Date` in Columns set as  **Quarter**
-2. Drop `Sales` in Rows. 
-3. Drop Department in Filters (Set as Office Suplies)
-4.  Order Date in filters (Set to Quarters) again click on the arrow to set Year/Quarter format
-5. Right click on the left axis -> format -> Axis -> Font(Blue) and Title (Blue)-> Under **Scale** set **Numbers** to 2 decimal  and change the currency to $.
-6. Click on the Shading and Set Worksheet Color to Black.
-7. Add the trend line and annotations to highest and lowest points of the graph.
+1. Create a dashboard.
+2. Click on Dashboard from the Title Pane and create new dashboard. 
+3. Choose the Source and Target reports
 
 ------------
-### ✅ **Report 10 : Exploring Tooltips Report**
+### ✅ **Report 7 : Exploring Tooltips Report**
 
 Duplicate the above report 9
 
