--- a/lab8/8.md
+++ b/lab8/8.md
@@ -100,51 +100,31 @@ Sort the axis to desending order.
 3. Choose the Source and Target reports
 
 ------------
-### ✅ **Report 7 : Exploring Tooltips Report**
+### ✅ **Report 7 : Source**
 
-Duplicate the above report 9
+Similar to the previous dashboard we will be creating a new one.
 
-1. Drop Department again to Filters and choose **Use all**
-2. Drop Department into Detail and Tooltips
-3. Change the Worksheet color to white using formatiing.
+1. Drag **Region** to the Columns shelf. 
+2. Drop **Category** in Rows 
+
+3. Drop Sales in Color and Label
+
 ---
-### ✅ **Report 11 : Sales by Categories Report**
+### ✅ **Report 8  :Target **
+
+1. Drop  `Order Date` in Columns(Set as Quarter)
+2. Drop `Sales` in Rows
+3. Ceate a combined set for Action(Category, Region). Just Press CRTL and choose both the fields. Then right click and choose combine fields.
 
 
-1.Drop `Sales` in Columns. 
-2. Drop Category to Rows
-3.Do some formatting using by clicking on the left axis (set the currency and units)
-4. Create a Set for Department:
-
-- Right-click Department in the data pane.
-
-- Select Create → Set
-
-- Name it: Department Set
-
-- Choose “All” or specific values → Click OK
-5. Create a Set for Order Date by Quarter:
-
-- Right-click Order Date → choose Create → Custom Date
-
-- Set to: Quarter
-
-- Name it: Order Date (Quarter)
-
-- Then right-click Order Date (Quarter) → choose Create → Set
-
-- Name it: Quarter Set
-
-- Select values (or all) → Click OK
-
-6. Create a Combined Set:
-
-- Ctrl+select Department Set and Quarter Set in the data pane.
-
-- Right-click → choose Create Combined Set
-`Tooltip (Department,QUARTER(Order Date))`
-
-Click OK
+Drop this combined field to Filters and choose only Office Machines, West
 
 
 ---
+
+### ✅ dasboard 4: Source and Target (with multiple dimensions) 
+
+Create a Dashboard and add the newly created Source and Target reports
+
+------------
+
