--- a/lab8/8.md
+++ b/lab8/8.md
@@ -127,4 +127,99 @@ Drop this combined field to Filters and choose only Office Machines, West
 Create a Dashboard and add the newly created Source and Target reports
 
 ------------
+### ✅ **Report 9  :Regions **
+
+1. Drop  `Longitude` in Columns
+2. Drop `Latitude` in Rows
+3. Drop 'Region' in Color and State in Detail.
+
+---------
+### ✅ Report 10  :Sales and Profit by State 
+
+1. Drop  `Profit` in Columns
+2. Drop `Sales` in Rows
+3. Drop 'Region' in Color and State in Detail.
+
+------------
+
+### ✅ Report 11  : Sales by Region
+
+1. Drop  `Sales` in Columns
+2. Drop `Region` in Rows
+3. Drop 'Region' in Color 
+-----------------------
+
+### ✅ dasboard 5: Sales and Profit by Region 
+
+Create a Dashboard and add the newly created Sales by Region , Regions and Sales and Profit by State  reports. You can also add a filter for Highlighting a state. 
+
+Select any mark in any view to highlight by Region.
+Use the Highlighter for State to highlight matching states.
+
+---------
+
+### ✅ Report 11  : Sales by Region  (set actions)
+
+1. Drop  `Longitude` in Columns
+2. Drop `Latitude` in Rows
+3. Drop 'Region' in Color and in Detail.
+4. Drop Sales in Detail.
+
+---------------
+### ✅ Report 12  :Sales by Category (set actions)
+1. Drop  `Sales` in Columns
+2. Drop `Category` in Rows
+3. Create a Set for Region. Choose Central for the visualization. Anse set In/Out and choose In.
+Drop 'Region' in Color
+
+----------
+### ✅ dasboard 6: Sales by Region and Category (set actions).
+
+Create a Dashboard and add the newly created Sales by Region  (set actions) and Sales by Category (set actions)
+
+------------------
+
+### ✅ Report 13  :Region Scorecard
+
+1. Drop  `Order Date` in Columns. Set it to Month
+2. Drop `Region` in Rows
+3.  Drop Order Date in Filters and set custom Date format as Month/Year
+4. Create a calculated field KPI - Profit Ratio and add the below formula
+
+```python
+IF [Profit Ratio] >= [Profit Ratio KPI Target]
+THEN "Acceptable"
+ELSE "Poor"
+END
+
+
+```
+
+5. Under Marks card change the type to Shape. And drop KPI in Shape and Color.
+
+----------------
+
+### ✅ Report 14  :Region Scorecard
+
+1. Drop  `Longitude` in Columns
+2. Drop `Latitude` in Rows
+3. Drop 'KPI - Profit Ratio ' in Color and Text
+4. Drop Region in Label and Detail
+
+
+----------
+
+### ✅ dasboard 7: Regional Scorecard (last 6 months).
+
+Create a Dashboard and add the newly created reports and set the Device type to Phone
+
+-----
+
+### ✅ Report 15  :Profit Ratio KPI by State
+
+1. Drop  `Longitude` in Columns
+2. Drop `Latitude` in Rows
+3. Drop 'KPI - Profit Ratio ' in Color and Detail
+4. Drop State in Detail.
+5. Drop Region in Filters and choose South.
 
