--- a/lab8/8.md
+++ b/lab8/8.md
@@ -215,7 +215,7 @@ Create a Dashboard and add the newly created reports and set the Device type to 
 
 -----
 
-### ✅ Report 15  :Profit Ratio KPI by State
+### ✅ Report 15  : Profit Ratio KPI by State
 
 1. Drop  `Longitude` in Columns
 2. Drop `Latitude` in Rows
@@ -223,3 +223,24 @@ Create a Dashboard and add the newly created reports and set the Device type to 
 4. Drop State in Detail.
 5. Drop Region in Filters and choose South.
 
+------------
+
+### ✅ Report 16  : Profit Ratio by Quarter
+
+1. Drop  `Order Date` in Columns. 
+2. Drop `KPI - Profit Ratio` in Rows. 
+3. Drop `Region` to `South`
+4. Drop `Action (State)` to Filters 
+------
+
+### ✅ dasboard 8: Profit Ratio Analysis.
+
+Create a Dashboard and add the newly created reports.
+
+----------
+
+### ✅ dasboard 9: South Region Analysis.
+
+
+
+Create a Dashboard and add the Profit Ratio Analysis. Add Caption Boxes and filters for Region. 
