--- a/lab9/9.md
+++ b/lab9/9.md
@@ -1,4 +1,4 @@
-Alright! Let's begin by designing **Lab 4: ** using the provided Superstore data.
+Alright! Let's begin by designing **Lab 9: ** using the provided Superstore data.
 
 
 
@@ -109,116 +109,43 @@ Crate a dashboard by adding the above report.
 
 1. Drag **Size(Sq Ft)** to the Columns shelf.
 2. Drop **Price** and Type of Sale in Rows 
-3. Add Address to Detail 
+3. Add Address to Detail.
+4. create a group for address. Name it is as Address(clusters) . Set the groups as Mid-range , Low - Price Size and High Price & Size
+5. Drop this field in Color
 
 ---------
-### ✅ Report 10  :Sales and Profit by State 
+### ✅ Report 11  :Clustering on a Map 
 
-1. Drop  `Profit` in Columns
-2. Drop `Sales` in Rows
-3. Drop 'Region' in Color and State in Detail.
+1. Drop  `Longitude` in Columns (Set the Measure as Longitude)
+2. Drop `Latitude` in Rows (Set the Measure as Latitude)
+3. Drop Address in Detail
+4. Drop Address(Clusters) in Color.
 
 ------------
 
-### ✅ Report 11  : Sales by Region
+### ✅ Report 12  : Distributions: Standard Deviation
 
-1. Drop  `Sales` in Columns
-2. Drop `Region` in Rows
-3. Drop 'Region' in Color 
+1. Drop  `Type of Sale` and `Size(Sq Ft)` in Columns
+2. Drop `Price` in Rows
+3. Drop 'Type of Sale' in Color 
+4. Drop Address in Detail.
+5. Add Reference Line by using the Analytics tab . Set refernce line as below
 -----------------------
 
-### ✅ dasboard 5: Sales and Profit by Region 
+### ✅ Report 13  : Standard Deviation of Price and Size
 
-Create a Dashboard and add the newly created Sales by Region , Regions and Sales and Profit by State  reports. You can also add a filter for Highlighting a state. 
-
-Select any mark in any view to highlight by Region.
-Use the Highlighter for State to highlight matching states.
-
+1. Drop  `Size(Sq Ft)` in Columns
+2. Drop `Price` in Rows
+3. Drop 'Type of Sale' in Color 
+4. Drop Address in Detail.
+5. Add Reference Line by using the Analytics tab/ right clcik on the axis . Set refernce bands as below
 ---------
 
-### ✅ Report 11  : Sales by Region  (set actions)
+### ✅ Report 14  : Population Forecast
 
-1. Drop  `Longitude` in Columns
-2. Drop `Latitude` in Rows
-3. Drop 'Region' in Color and in Detail.
-4. Drop Sales in Detail.
+1. Drop  `Year` in Columns
+2. Drop `Population` in Rows
+3. Drop `Country Name` in Filters (choose any countries) then drop in Color and Label.
+4. Use Forecast option from the Analytical tab. 
 
 ---------------
-### ✅ Report 12  :Sales by Category (set actions)
-1. Drop  `Sales` in Columns
-2. Drop `Category` in Rows
-3. Create a Set for Region. Choose Central for the visualization. Anse set In/Out and choose In.
-Drop 'Region' in Color
-
-----------
-### ✅ dasboard 6: Sales by Region and Category (set actions).
-
-Create a Dashboard and add the newly created Sales by Region  (set actions) and Sales by Category (set actions)
-
-------------------
-
-### ✅ Report 13  :Region Scorecard
-
-1. Drop  `Order Date` in Columns. Set it to Month
-2. Drop `Region` in Rows
-3.  Drop Order Date in Filters and set custom Date format as Month/Year
-4. Create a calculated field KPI - Profit Ratio and add the below formula
-
-```python
-IF [Profit Ratio] >= [Profit Ratio KPI Target]
-THEN "Acceptable"
-ELSE "Poor"
-END
-
-
-```
-
-5. Under Marks card change the type to Shape. And drop KPI in Shape and Color.
-
-----------------
-
-### ✅ Report 14  :Region Scorecard
-
-1. Drop  `Longitude` in Columns
-2. Drop `Latitude` in Rows
-3. Drop 'KPI - Profit Ratio ' in Color and Text
-4. Drop Region in Label and Detail
-
-
-----------
-
-### ✅ dasboard 7: Regional Scorecard (last 6 months).
-
-Create a Dashboard and add the newly created reports and set the Device type to Phone
-
------
-
-### ✅ Report 15  : Profit Ratio KPI by State
-
-1. Drop  `Longitude` in Columns
-2. Drop `Latitude` in Rows
-3. Drop 'KPI - Profit Ratio ' in Color and Detail
-4. Drop State in Detail.
-5. Drop Region in Filters and choose South.
-
-------------
-
-### ✅ Report 16  : Profit Ratio by Quarter
-
-1. Drop  `Order Date` in Columns. 
-2. Drop `KPI - Profit Ratio` in Rows. 
-3. Drop `Region` to `South`
-4. Drop `Action (State)` to Filters 
-------
-
-### ✅ dasboard 8: Profit Ratio Analysis.
-
-Create a Dashboard and add the newly created reports.
-
-----------
-
-### ✅ dasboard 9: South Region Analysis.
-
-
-
-Create a Dashboard and add the Profit Ratio Analysis. Add Caption Boxes and filters for Region. 
