--- a/lab10/10.md
+++ b/lab10/10.md
@@ -1,1 +1,161 @@
+Alright! Let's begin by designing **Lab 4: ** using the provided Superstore data.
+
+
+
+---
+
+
+
+### ✅ **Report 1:Change in State Rankings for West Region Report**
+
+
+1. Drag **Order Date** to the Columns shelf.(Set to Year)
+2. Drop **Sales** in Rows ( Double tap and enter `Rank(Sum(Sales))` )
+3. Drop **Order Date** in filters (Choose year)
+4. Drop Region -> West
+5. Drop State in Label
+6. Add a table calculation for Sales. Choose states in Specifc Dimensions
+
+Set the label configuration as below and also set the visual to Entire View
+
+
+
+---
+
+### ✅ **Report 2: Bump Chart Report**
+
+Just duplicate the above report. Remove Order date from the Filters. 
+
+
+---
+
+### ✅ **Report 3: Waterfall ChartReport**
+
+
+1. Drag **Department**  and `Category` to the Columns shelf.
+2. Drop **Profit** in Rows follow the below configuration
+
+3. Drop Profit in Color and Size
+4. Double tap on  Profit and enter -SUM([Profit])
+5. In Marks card and choose Gantt Bar
+
+----
+
+### ✅ **Report 4: Step Lines Report**
+
+
+1. Drag **Department**  and `Category` to the Columns shelf.
+2. Drop **Profit** in Rows follow the below configuration
+
+3. Drop `Category` in filters. Choose all the items.
+4. Add Profit in Color
+5. Set the Marks Card to Line type. Once you set that, you will be able to see the path option. You can set the line type to Step.
+
+Change the view to Entire View
+
+-----
+
+
+### ✅ **Report 5: Spark Lines Report**
+
+
+1. Drag `Order Date` to the Columns shelf. Choose as Quarter
+2. Create calculated fields for the below using the approriate formulas
+
+- Last Sales - `IF LAST() == 0 THEN SUM([Sales]) END`
+- Min Sales - `WINDOW_MAX(SUM([Sales]))`
+- Max Sales - `WINDOW_MIN(SUM([Sales]))`
+
+3. Drop **Category** , `Min Sales`, `Max Sales`, `Sales` and `Last sales` in Rows.
+
+4. Add table calculation for Min , Max and Last Sales as below
+
+**Compute using - Table(across)**
+
+5. For Sales set it as Line and for Last sales as Circle
+
+Change the Type as Fit Height
+
+-----
+
+### ✅ **Report 6: Dumbbell Chart **
+
+
+
+1. Drag **Profit** to the Columns shelf twice.
+2. Drop **Category** in Rows 
+3. Add Region to Filters( Choose West and East)
+
+4. For one of Sum(Profit) set it to Line. Pull Region to path
+5. For another Sum(Profit) set it to Circle. Pull Region to Color
+ -----
+ ### ✅ **Report 7: Unit Chart Report**
+
+Duplicate the above report and set the trend line as **Logarithmic**
+
+---------
+
+### ✅ Report 8: Power Report 
+
+Duplicate the above report and set the trend line as **Power**
+
+------------
+### ✅ **Report 9 : 3rd Degree Polynomial**
+
+1. Drag **Size(Sq Ft)** to the Columns shelf.
+2. Drop **Price** and Type of Sale in Rows 
+3. Add Address to Detail
+4. Choose a Polynomal. Set the configuration.
+
+
+---
+### ✅ **dasboard :Testing Predictions **
+
+Crate a dashboard by adding the above report.
+
+------------
+### ✅ **Report 10  :Clustering of Addresses **
+
+1. Drag **Size(Sq Ft)** to the Columns shelf.
+2. Drop **Price** and Type of Sale in Rows 
+3. Add Address to Detail.
+4. create a group for address. Name it is as Address(clusters) . Set the groups as Mid-range , Low - Price Size and High Price & Size
+5. Drop this field in Color
+
+---------
+### ✅ Report 11  :Clustering on a Map 
+
+1. Drop  `Longitude` in Columns (Set the Measure as Longitude)
+2. Drop `Latitude` in Rows (Set the Measure as Latitude)
+3. Drop Address in Detail
+4. Drop Address(Clusters) in Color.
+
+------------
+
+### ✅ Report 12  : Distributions: Standard Deviation
+
+1. Drop  `Type of Sale` and `Size(Sq Ft)` in Columns
+2. Drop `Price` in Rows
+3. Drop 'Type of Sale' in Color 
+4. Drop Address in Detail.
+5. Add Reference Line by using the Analytics tab . Set refernce line as below
+-----------------------
+
+### ✅ Report 13  : Standard Deviation of Price and Size
+
+1. Drop  `Size(Sq Ft)` in Columns
+2. Drop `Price` in Rows
+3. Drop 'Type of Sale' in Color 
+4. Drop Address in Detail.
+5. Add Reference Line by using the Analytics tab/ right clcik on the axis . Set refernce bands as below
+---------
+
+### ✅ Report 14  : Population Forecast
+
+1. Drop  `Year` in Columns
+2. Drop `Population` in Rows
+3. Drop `Country Name` in Filters (choose any countries) then drop in Color and Label.
+4. Use Forecast option from the Analytical tab. 
+
+---------------
 
