--- a/lab10/10.md
+++ b/lab10/10.md
@@ -91,7 +91,9 @@ Change the Type as Fit Height
  -----
  ### ✅ **Report 7: Unit Chart Report**
 
-Duplicate the above report and set the trend line as **Logarithmic**
+1. Drop **Region** in Rows 
+2. 
+Drop 
 
 ---------
 
@@ -158,4 +160,3 @@ Crate a dashboard by adding the above report.
 4. Use Forecast option from the Analytical tab. 
 
 ---------------
-
