--- a/lab10/10.md
+++ b/lab10/10.md
@@ -91,72 +91,60 @@ Change the Type as Fit Height
  -----
  ### ✅ **Report 7: Unit Chart Report**
 
-1. Drop **Region** in Rows 
-2. 
-Drop 
+1. Drop **Region** in Rows. Sort as Desending later
+2. Create calculated field as Late Shipping.
+
+**Formula**
+
+`DATEDIFF('day', [Order Date], [Ship Date]) > 14`
+
+Drop this field in Filters and set as True
+
+3. Drop Customer Id in detail.
+4. Under Marks Card choose shape as Type.
+5. Click on the Shape -> More shapes -> Gender , choose any gender for icons
 
 ---------
 
-### ✅ Report 8: Power Report 
+### ✅ Report 8: Marimekko Chart  
 
-Duplicate the above report and set the trend line as **Power**
+1. Create calculated field for `Sales for region`
 
-------------
-### ✅ **Report 9 : 3rd Degree Polynomial**
+**Formula**
 
-1. Drag **Size(Sq Ft)** to the Columns shelf.
-2. Drop **Price** and Type of Sale in Rows 
-3. Add Address to Detail
-4. Choose a Polynomal. Set the configuration.
+```python
+//X Axis Location
+
+IF FIRST() == 0
+    THEN MIN({EXCLUDE [Department] : SUM(Sales)})
+ELSEIF LOOKUP(MIN([Region]), -1) != MIN([Region])
+    THEN PREVIOUS_VALUE(0) + MIN({EXCLUDE [Department] : SUM(Sales)})
+ELSE
+    PREVIOUS_VALUE(0)
+END
+
+```
+Drop this in Columns.Set the Table calculation as below
+
+
+2. Drop Sales in Rows and set the below table calculation.
+
+Drop the following in Marks card accordingly.
+
+**Region** -> Text and Region
+Department -> Detail and Label
+Sales -> Size (double tap to enter the formula. {EXCLUDE [Department] : SUM(Sales)})
+Sales -> Label twice
+
+Set Marks card to Bar type
+
+### ✅ **Report 9 : Sales v. Profit**
+
+1. Drag **Profit** to the Columns shelf.
+2. Drop **Sales** and Type of Sale in Rows 
+3. Region to Filters. Set Use all
+4. Drop Department in Color and Label
+Turn on animation using the menu option: Format | Animations...
 
 
 ---
-### ✅ **dasboard :Testing Predictions **
-
-Crate a dashboard by adding the above report.
-
-------------
-### ✅ **Report 10  :Clustering of Addresses **
-
-1. Drag **Size(Sq Ft)** to the Columns shelf.
-2. Drop **Price** and Type of Sale in Rows 
-3. Add Address to Detail.
-4. create a group for address. Name it is as Address(clusters) . Set the groups as Mid-range , Low - Price Size and High Price & Size
-5. Drop this field in Color
-
----------
-### ✅ Report 11  :Clustering on a Map 
-
-1. Drop  `Longitude` in Columns (Set the Measure as Longitude)
-2. Drop `Latitude` in Rows (Set the Measure as Latitude)
-3. Drop Address in Detail
-4. Drop Address(Clusters) in Color.
-
-------------
-
-### ✅ Report 12  : Distributions: Standard Deviation
-
-1. Drop  `Type of Sale` and `Size(Sq Ft)` in Columns
-2. Drop `Price` in Rows
-3. Drop 'Type of Sale' in Color 
-4. Drop Address in Detail.
-5. Add Reference Line by using the Analytics tab . Set refernce line as below
------------------------
-
-### ✅ Report 13  : Standard Deviation of Price and Size
-
-1. Drop  `Size(Sq Ft)` in Columns
-2. Drop `Price` in Rows
-3. Drop 'Type of Sale' in Color 
-4. Drop Address in Detail.
-5. Add Reference Line by using the Analytics tab/ right clcik on the axis . Set refernce bands as below
----------
-
-### ✅ Report 14  : Population Forecast
-
-1. Drop  `Year` in Columns
-2. Drop `Population` in Rows
-3. Drop `Country Name` in Filters (choose any countries) then drop in Color and Label.
-4. Use Forecast option from the Analytical tab. 
-
----------------
