--- a/lab11/11.md
+++ b/lab11/11.md
@@ -10,6 +10,7 @@ Alright! Let's begin by designing **Lab 11** using the provided Superstore data.
 2. Drag Latitude to the Rows shelf.
 3. Drop Profit to Color and State to Detail.
 
+Create a parameter as below
 
 ### ✅ **Report 2:Individual Item Profit and Sales report**
 
@@ -59,7 +60,57 @@ Drop Show sheet filter.
 
 1. 
 
-Change the view to Entire View
+Add new calculation for both rows and columns **MIN(1)**
+
+
+Start creating dashboards to explore 
+
+
+
 
 -----
 
+# Show/Hide Filters and Legends (Recommended: Dynamic Zone Visibility)
+
+
+**Dashboard Setup:**
+1. Drag filters/legends to your dashboard. Place them in a layout container (Horizontal/Vertical) if grouping.
+2. Select the filter/legend (or its container).
+3. Go to the Layout tab.
+4. Check "Control visibility using zones" and select your [Show Filters Trigger] calculated field.
+**Interaction:**
+1. Show the "Show Filters?" parameter on the dashboard (right-click parameter > "Show Parameter").
+2. Change the parameter value to toggle visibility.
+
+--------
+
+# Show/Hide Instructions (Recommended: Dynamic Zone Visibility)
+
+**Dashboard Setup:**
+1. Drag a Text Object to your dashboard. Type your instructions into it.
+2. Place this Text Object (and any other related elements) inside a layout container (Horizontal or Vertical) for better management, though a single text object can be controlled directly.
+3. Select the Text Object (or its container).
+4. Go to the Layout tab on the left-hand pane.
+5. Check "Control visibility using zones" and select your [Show Instructions Trigger] calculated field from the dropdown.
+**Interaction:**
+1. Show the "Show Instructions?" parameter on the dashboard (right-click parameter > "Show Parameter").
+2. Change the parameter value to toggle the visibility of the instructions.
+
+-----------------
+# Simple Example of Collapsing
+**Create the Dashboard:**
+1. Click the "New Dashboard" icon (or Dashboard > New Dashboard).
+Set Size to "Custom (800 x 500)".
+2. Drag the "Profit by Department and Category" sheet from the "Sheets" pane onto the dashboard canvas.
+**Add Department Filter:**
+1. Select the "Profit by Department and Category" sheet on the dashboard.
+2. Click the small dropdown arrow in the top-right corner of the sheet.
+3. Go to Filters and select Department. (This will add the quick filter to the dashboard).
+(Optional: You can move and resize the filter on the dashboard).
+--------
+# Sheet Swap
+**A New Dashboard was created.**
+1. Its Size was set to "Custom (800 x 300)".
+2. A Layout Container (likely a Vertical or Horizontal one, though not explicitly shown if it's the sole object) was added to the dashboard.
+3. Both the "Map" sheet and the "Show / Hide Filters and Legends" sheet were dragged into this same layout container.
+4. The Show Sheet Parameter Control was added to the dashboard (right-click the Show Sheet parameter in the Data pane > "Show Parameter"). It's placed at the top right of the dashboard.
